--- a/mysite/shop/templates/base.html
+++ b/mysite/shop/templates/base.html
@@ -188,6 +188,7 @@ nav a:hover,
             <a href="{% url 'shop:flowers' %}">Rožės</a>
             <a href="{% url 'shop:decorations' %}">Dekoracijos</a>
             <a href="#">Pakavimas</a>
+            <a href="{% url 'shop:cart' %}">Pirkinių krepšelis</a>
         </div>
     </div>
 </nav>
