--- a/mysite/shop/templates/cart.html
+++ b/mysite/shop/templates/cart.html
@@ -43,27 +43,32 @@
 
 <body>
 
-    <h1>Your Shopping Cart</h1>
+<h1>Your Shopping Cart</h1>
 
-    <div class="product-list">
+<div class="product-list">
 
-   
 
-    {% for item in cart_items %}
-    <div class="product-item">
-        <p>{{ item.product.color }} ({{ item.quantity }})</p>
-        <p>Price: ${{ item.product.price }}</p>
-        <a href="{% url 'cart:remove_from_cart' item.id %}">Remove</a>
-    </div>
-    {% empty %}
+    {% if cart_items %}
+    <ul>
+        {% for item in cart_items %}
+        <li>
+            {{ item.color }} - Quantity: {{ item.qty }} - Price: ${{ item.price }}
+            <a href="{% url 'shop:remove_from_cart' item.id %}">Remove</a>
+        </li>
+
+        {% endfor %}
+    </ul>
+
+
+    {% else %}
     <p>Your cart is empty.</p>
-    {% endfor %}
+    {% endif %}
 
-    </div>
+</div>
 
-    <p>Total Price: ${{ total_price }}</p>
+<p>Total Price: ${{ total_price }}</p>
 
-    <a href="{% url 'cart:product_list' %}">Continue Shopping</a>
+<a href="{% url 'shop:flowers' %}">Continue Shopping</a>
 
 </body>
 
