--- a/mysite/shop/templates/base.html
+++ b/mysite/shop/templates/base.html
@@ -172,6 +172,39 @@ nav a:hover,
             font-size: 20px;
             z-index: 1500;
         }
+
+            .quantity-selector {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .btn {
+        background-color: #C4B0B2;
+        color: white;
+        border: none;
+        padding: 10px;
+        font-size: 16px;
+        cursor: pointer;
+        width: 20px;
+        height: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .btn:hover {
+        background-color: #734F59;
+    }
+
+    .quantity-input {
+        width: 20px;
+        text-align: center;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        height: 20px;
+        font-size: 16px;
+    }
     </style>
 </head>
 <body>
