updates to flowers.html design

--- a/mysite/shop/templates/base.html
+++ b/mysite/shop/templates/base.html
@@ -191,6 +191,7 @@ nav a:hover,
         display: flex;
         align-items: center;
         justify-content: center;
+        border: 1px solid #734F59;
     }
 
     .btn:hover {
@@ -198,12 +199,12 @@ nav a:hover,
     }
 
     .quantity-input {
-        width: 20px;
+        width: 18px;
         text-align: center;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        height: 20px;
+        border: 0px solid #ECE1E2;
+        height: 18px;
         font-size: 16px;
+        border: 1px solid #734F59;
     }
     </style>
 </head>
