--- a/mysite/shop/templates/flowers.html
+++ b/mysite/shop/templates/flowers.html
@@ -76,9 +76,12 @@
         }
 
         .card {
+            width: 300px; /* Set the width of the card */
+            height: 400px
             border: none;
             border-radius: 10px;
             overflow: hidden;
+            position: relative;
         }
 
         .card-body {
@@ -137,6 +140,15 @@
             width: 30px;
             height: 30px;
         }
+
+        .btn-add-to-cart {
+            background-color: #C4B0B2;
+            color: #734F59;
+            padding: 10px 20px;
+            border: 2px solid #734F59;
+            border-radius: 50px;
+            position: relative;
+        }
     </style>
 </head>
 
@@ -188,19 +200,18 @@
             selectedColor.textContent = productColor;  // Set the color text
         }
     }
-
 </script>
 
 <div class="row mb-4">
     <div class="col-md-12">
         <div class="card-body"
-             style="position: relative; background-color: #ECE1E2; padding: 20px; box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1); border: 4px solid #C4B0B2; display: flex; justify-content: flex-start; align-items: flex-start;">
+             style="position: relative; background-color: #ECE1E2; padding: 20px; box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1); border: 4px solid #C4B0B2; display: flex; justify-content: center; align-items: flex-start;">
             <div id="main-image" class="text-center mb-4"
-                 style="overflow: hidden; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); margin-right: 20px;">
+                 style="overflow: hidden; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); margin-right: 20px; width: 600px;">
                 <img id="selected-image"
                      src="{% if first_product.image_upload %}{{ first_product.image_upload.url }}{% else %}{{ first_product.image.url }}{% endif %}"
                      class="img-fluid"
-                     style="width: 400px; height: 500px;"
+                     style="width: 600px; height: 700px;"
                      alt="Selected Color">
                 <div id="selected-color"
                      style="text-align: center; margin-top: 10px; font-size: 1.2rem; font-weight: bold; color: #734F59;">
@@ -210,9 +221,18 @@
 
             <div class="mt-4">
                 <div class="card shadow-sm"
-                     style="background-color: #ECE1E2; margin-right: 20px;">
+                     style="background-color: #ECE1E2; margin-right: 20px; width: 650px;">
                     <div class="card-body">
                         <div class="col-md-12">
+
+                            <!-- Text about the flower moved above the product grid -->
+                            <div class="thumbnail-container"
+                                 style="text-align: center; margin-top: 20px; position: relative;">
+                                Ilgaamžė, rankų darbo grožybė iš satino šilko, kuri niekada nevys. Kiekviena rožė kruopščiai
+                                pagaminta iš aukštos kokybės medžiagos, užtikrinant natūralią išvaizdą. Tinka bet kokiai progai:
+                                gimtadieniams, vestuvėms ar namų dekorui. Pastaba: Dekoracijos į puokštę neįeina. Jei norite
+                                įsigyti dekoracijų, galite padaryti tai paspaudę čia.
+                            </div>
 
                             <!-- Form for adding products to cart -->
                             <form id="cart-form" method="POST" action="{% url 'shop:add_to_cart_bulk' %}">
@@ -246,57 +266,33 @@
                                     </div>
                                     {% endfor %}
                                 </div>
+
+                                <!-- The line of text placed back above the text input field -->
                                 <div class="thumbnail-container"
-                                     style="text-align: center; margin-top: 10px; position: relative; font-size: 15px;">Vienos rožės kaina
-                                    <strong>1.99€</strong>
+                                     style="text-align: center; margin-top: 20px; position: relative; font-style: italic; font-size: 13px;">
+                                    Prašome nurodyti, kaip norėtumėte, kad būtų supakuota jūsų puokštė: pakavimo popieriaus spalvas ir kitus pageidavimus.
                                 </div>
 
-                                <!-- Add to Cart button moved inside the form -->
-                                <button type="submit" class="btn-add-to-cart rounded-pill"
-                                        style="position: absolute; bottom: 10px; right: 10px;
-                                                background-color: #C4B0B2; color: #734F59;
-                                                padding: 10px 20px; border: 2px solid #734F59;
-                                                border-radius: 50px;">
-                                    <i class="bi bi-bag-plus-fill" style="margin-right: 5px; color: #734F59;"></i>Add to
-                                    Cart
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="mt-4">
-                <div class="card shadow-sm"
-                     style="background-color: #ECE1E2; width: 500px; height: auto; max-width: 100%; padding: 20px; border-radius: 10px; box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);">
-                    <div class="card-body">
-                        <div class="col-md-12">
-                            <div class="thumbnail-container"
-                                 style="text-align: center; margin-top: 5px; position: relative;">Ilgaamžė, rankų darbo
-                                grožybė iš satino šilko, kuri niekada nevys. Kiekviena rožė kruopščiai pagaminta iš
-                                aukštos kokybės medžiagos, užtikrinant natūralią išvaizdą. Tinka bet kokiai progai:
-                                gimtadieniams, vestuvėms ar namų dekorui. Pastaba: Dekoracijos į puokštę neįeina. Jei
-                                norite įsigyti dekoracijų, galite padaryti tai paspaudę čia.
-                            </div>
-                            <!-- Added margin-bottom to create space between the two texts -->
-                            <div class="thumbnail-container"
-                                 style="text-align: center; margin-top: 100px; position: relative; font-style: italic; font-size: 13px;">
-                                Prašome nurodyti,
-                                kaip norėtumėte, kad būtų supakuota jūsų puokštė: pakavimo popieriaus spalvas ir
-                                kitus pageidavimus.
-                            </div>
-                            <form method="POST">
-                                {% csrf_token %}
+                                <!-- Text input field for bouquet preferences -->
                                 <div class="thumbnail-container"
                                      style="text-align: center; margin-top: 20px; position: relative;">
                                     {{ form.comment }}
                                 </div>
+
+                                <!-- Add to Cart button -->
+                                <button type="submit" class="btn-add-to-cart rounded-pill"
+                                        style="background-color: #C4B0B2; color: #734F59;
+                                                padding: 10px 20px; border: 2px solid #734F59;
+                                                border-radius: 50px; margin-top: 20px;">
+                                    <i class="bi bi-bag-plus-fill" style="margin-right: 5px; color: #734F59;"></i>Add to Cart
+                                </button>
                             </form>
+
                         </div>
+
                     </div>
                 </div>
             </div>
-
-
         </div>
     </div>
 </div>
