--- a/mysite/shop/templates/flowers.html
+++ b/mysite/shop/templates/flowers.html
@@ -227,18 +227,22 @@
 
                             <!-- Text about the flower moved above the product grid -->
                             <div class="thumbnail-container"
-                                 style="text-align: center; margin-top: 20px; position: relative;">
-                                Ilgaamžė, rankų darbo grožybė iš satino šilko, kuri niekada nevys. Kiekviena rožė kruopščiai
-                                pagaminta iš aukštos kokybės medžiagos, užtikrinant natūralią išvaizdą. Tinka bet kokiai progai:
-                                gimtadieniams, vestuvėms ar namų dekorui. Pastaba: Dekoracijos į puokštę neįeina. Jei norite
+                                 style="text-align: center; margin-bottom: 30px; position: relative;">
+                                Ilgaamžė, rankų darbo grožybė iš satino šilko, kuri niekada nevys. Kiekviena rožė
+                                kruopščiai
+                                pagaminta iš aukštos kokybės medžiagos, užtikrinant natūralią išvaizdą. Tinka bet kokiai
+                                progai:
+                                gimtadieniams, vestuvėms ar namų dekorui. Pastaba: Dekoracijos į puokštę neįeina. Jei
+                                norite
                                 įsigyti dekoracijų, galite padaryti tai paspaudę čia.
                             </div>
 
                             <!-- Form for adding products to cart -->
                             <form id="cart-form" method="POST" action="{% url 'shop:add_to_cart_bulk' %}">
                                 {% csrf_token %}
+
                                 <div class="color-thumbnails"
-                                     style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 15px;">
+                                     style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 15px;">
                                     {% for product in flowers_data %}
                                     <div class="thumbnail-container" style="text-align: center; margin-top: 10px;">
                                         <img src="{{ product.image.url }}"
@@ -247,45 +251,29 @@
                                              data-color="{{ product.color }}" style="max-width: 65px; height: 65px;">
                                         <div class="input-group input-group-sm quantity-selector quantity-selector-sm">
                                             <button type="button" class="btn btn-secondary btn-minus"
-                                                    style="border-top-left-radius: 4px; border-bottom-left-radius: 4px; border-right: none;"
-                                                    data-bs-step="down">
-                                                <span>−</span>
-                                            </button>
-                                            <input type="text" id="inputQuantitySelectorSm-{{ product.id }}"
-                                                   class="form-control quantity-input"
-                                                   style="border-right: none; border-left: none"
-                                                   name="quantities[]" value="0" min="0" max="10"
-                                                   aria-live="polite" aria-label="Quantity selector">
-                                            <button type="button" class="btn btn-secondary btn-plus"
-                                                    style="border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-left: none "
-                                                    data-bs-step="up">
-                                                <span>+</span>
-                                            </button>
+                                                    data-bs-step="down"><span>−</span></button>
+                                            <input type="text" class="form-control quantity-input" name="quantities[]"
+                                                   value="0" min="0" max="10">
+                                            <button type="button" class="btn btn-secondary btn-plus" data-bs-step="up">
+                                                <span>+</span></button>
                                             <input type="hidden" name="products[]" value="{{ product.id }}">
                                         </div>
                                     </div>
                                     {% endfor %}
                                 </div>
 
-                                <!-- The line of text placed back above the text input field -->
-                                <div class="thumbnail-container"
-                                     style="text-align: center; margin-top: 20px; position: relative; font-style: italic; font-size: 13px;">
-                                    Prašome nurodyti, kaip norėtumėte, kad būtų supakuota jūsų puokštė: pakavimo popieriaus spalvas ir kitus pageidavimus.
+                                <!-- Add to Cart button positioned in bottom-right corner -->
+                                <div style="position: relative; padding-bottom: 100px; padding-top: 158px">
+                                    <!-- Ensure padding to avoid overlap -->
+                                    <button type="submit" class="btn-add-to-cart rounded-pill"
+                                            style="background-color: #C4B0B2; color: #734F59;
+                                            padding: 10px 20px; border: 2px solid #734F59;
+                                            border-radius: 50px; position: absolute; bottom: 20px; right: 20px;">
+                                        <i class="bi bi-bag-plus-fill" style="margin-right: 5px; color: #734F59;"></i>Add
+                                        to Cart
+                                    </button>
                                 </div>
 
-                                <!-- Text input field for bouquet preferences -->
-                                <div class="thumbnail-container"
-                                     style="text-align: center; margin-top: 20px; position: relative;">
-                                    {{ form.comment }}
-                                </div>
-
-                                <!-- Add to Cart button -->
-                                <button type="submit" class="btn-add-to-cart rounded-pill"
-                                        style="background-color: #C4B0B2; color: #734F59;
-                                                padding: 10px 20px; border: 2px solid #734F59;
-                                                border-radius: 50px; margin-top: 20px;">
-                                    <i class="bi bi-bag-plus-fill" style="margin-right: 5px; color: #734F59;"></i>Add to Cart
-                                </button>
                             </form>
 
                         </div>
